try to change color

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <style>
         body {
             font-family: Arial;
-            background: #adb6c3;
+            background: #232e32;
             display: flex;
             justify-content: center;
             align-items: center;
